--- a/public/account/user/dashboard.html
+++ b/public/account/user/dashboard.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/index.css">
     <link rel="stylesheet" href="../../styles/dashboard.css">
-    <script src="../../js/general/onSession.js""></script>
+    <script src="../../js/general/onSession.js"></script>
 </head>
 
 <body class="roboto scroller">
