--- a/public/account/admin/index.html
+++ b/public/account/admin/index.html
@@ -347,7 +347,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Total (Budget)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-budget-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -364,7 +364,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Total Number of (Contractors)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">5,000</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-contractors-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -383,7 +383,7 @@
                       <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total Number of Users</div>
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
-                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50000</div>
+                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800" id="total-user-value">Loading...</div>
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
@@ -407,7 +407,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Number of projects</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">18,239</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-project-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -428,7 +428,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Number of Reviewers</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">4,000</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-reviewers-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -445,7 +445,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Total Number of (Comments)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">15,000,067</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-comment-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -464,7 +464,7 @@
                       <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Total Number of Community Members</div>
                       <div class="row no-gutters align-items-center">
                         <div class="col-auto">
-                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">15000</div>
+                          <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800" id="total-community-value">Loading...</div>
                         </div>
                         <div class="col">
                           <div class="progress progress-sm mr-2">
@@ -488,7 +488,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Number of Newsletter Subscribers</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">1800</div>
+                      <div class="h5 mb-0 font-weight-bold text-gray-800" id="total-subscribers-value">Loading...</div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-comments fa-2x text-gray-300"></i>
@@ -672,6 +672,7 @@
   <script src=" ../../js/general/placeholder.js""> </script>
   <script src=" ../../js/general/admin-placeholder.js""> </script>
   <script src="../admin/js/getstats.js"></script>
+  <script src="../admin/js/fetchusers.js"></script>
 </body>
 
 </html>
