--- a/public/account/admin/reviewer.html
+++ b/public/account/admin/reviewer.html
@@ -19,7 +19,7 @@
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
   <!-- Custom styles for this page -->
-  <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <link href="js/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 </head>
 
