--- a/public/account/admin/project.html
+++ b/public/account/admin/project.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this page -->
   <link href="js/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <script src="../../js/general/onSession.js"></script>
 
 </head>
 
@@ -391,55 +392,8 @@
                         <th>View</th>
                       </tr>
                   </tfoot>
-                  <tbody>
-                    <tr>
-                      <td>Tiger Nixon</td>
-                      <td>System Architect</td>
-                      <td>Edinburgh</td>
-                      <td>61</td>
-                      <td>2011/04/25</td>
-                      <td>$320,800</td>
-                      <th>In Progress</th>
-                      <th><a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                        <span class="text">View</span>
-                      </a></th>
-                    </tr>
-                    <tr>
-                      <td>Garrett Winters</td>
-                      <td>Accountant</td>
-                      <td>Tokyo</td>
-                      <td>63</td>
-                      <td>2011/07/25</td>
-                      <td>$170,750</td>
-                      <th>Completed</th>
-                      <th><a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                        <span class="text">View</span>
-                      </a></th>
-                    </tr>
-                    <tr>
-                      <td>Ashton Cox</td>
-                      <td>Junior Technical Author</td>
-                      <td>San Francisco</td>
-                      <td>66</td>
-                      <td>2009/01/12</td>
-                      <td>$86,000</td>
-                      <th>Completed</th>
-                      <th><a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                        <span class="text">View</span>
-                      </a></th>
-                    </tr>
-                    <tr>
-                      <td>Cedric Kelly</td>
-                      <td>Senior Javascript Developer</td>
-                      <td>Edinburgh</td>
-                      <td>22</td>
-                      <td>2012/03/29</td>
-                      <td>$433,060</td>
-                      <th>In Progress</th>
-                      <th><a href="#" class="btn btn-primary btn-icon-split btn-sm">
-                        <span class="text">View</span>
-                      </a></th>
-                    </tr>
+                  <tbody id="project-table-body">
+                    
                   </tbody>
                 </table>
               </div>
@@ -509,6 +463,10 @@
 
   <!-- Page level custom scripts -->
   <script src="js/demo/datatables-demo.js"></script>
+  <script src="../../js/general/routes.js""></script>
+  <script src=" ../../js/general/placeholder.js""> </script>
+  <script src=" ../../js/general/admin-placeholder.js""> </script>
+  <script src="../admin/js/fetchprojects.js"></script>
 
 </body>
 
