--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -59,8 +59,8 @@
                     </ul>
                 </div>
             </nav>
-            <div class="search-results-head col-12">
-                <h4 class="mt-5 ml-5">Search Results for: Port Harcourt</h4>
+            <div class="search-results-head col-12" data-search-placeholder-box>
+                <h4 class="mt-3 ml-5">Search Results for: <span data-search-placeholder></span></h4>
             </div>
             <div class="search-more col-12 col-md-6 mx-auto mt-4">
                 <div class="special-input br-10px mb-3 col-12 col-md-12 mx-auto row mx-0 px-2 border-brand">
@@ -92,20 +92,20 @@
                 </div>
             </div>
             <div class="search-results-con col-12 row mx-0">
-                <div class="col-12 col-md-4 filter-section mt-5 scroller">
+                <div class="col-12 col-md-4 filter-section mb-4 mt-5 scroller">
                     <div class="now-showing col-12 mt-3 border-bottom">
                         <span class="grey font-12px">Now showing projects 1-20 of 50</span>
                     </div>
                     <div class="status-filter col-12 mt-3 border-bottom">
                         <p class="bold grey">Status</p>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="In-Progress">
                             <label class="form-check-label">
                                 In Progress (10,200)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Completed">
                             <label class="form-check-label">
                                 Completed (1,200)
                             </label>
@@ -114,114 +114,63 @@
                     <div class="state-filter col-12 mt-3 border-bottom">
                         <p class="bold grey">State</p>
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Abia">
                             <label class="form-check-label">
                                 Abia (30)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Akwa">
                             <label class="form-check-label">
                                 Akwa Ibom (10)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Bayelsa">
                             <label class="form-check-label">
                                 Bayelsa (1200)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Cross">
                             <label class="form-check-label">
                                 Cross River (1200)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Delta">
                             <label class="form-check-label">
                                 Delta (150)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Edo">
                             <label class="form-check-label">
                                 Edo (1200)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Imo">
                             <label class="form-check-label">
                                 Imo (1200)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Ondo">
                             <label class="form-check-label">
                                 Ondo (120)
                             </label>
                         </div>
                         <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="">
+                            <input class="form-check-input client-search" type="checkbox" value="Rivers">
                             <label class="form-check-label">
                                 Rivers (100)
                             </label>
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-8 mt-5 projects-section" data-project-dom>
-                    <div class="col-12 projects-listed scroller">
-                        <div class="col-12 mb-3 project row mx-0 p-4">
-                            <div class="col-12 col-md-5 px-0 project-image">
-                                <img src="../../images/welcome-bg.png" alt="">
-                            </div>
-                            <div class="col-12 col-md-7 project-details">
-                                <div class="col-12 title-removefrom row mx-0">
-                                    <h3 class="grey bold px-0 col-12 col-md-9 mt-2" onclick="location.href='project.html'">Project Title</h3>
-                                    <span class="col-12 col-md-3 px-0 mt-2 grey mt-2">Delete from saved</span>
-                                </div>
-                                <div class="col-12 contractor-name">
-                                    <h6 class="grey">Name of contractor</h6>
-                                </div>
-                                <div class="col-12 activity-status">
-                                    <span class="grey">Activity Status</span>
-                                    <span class="status-designed p-1 br-10px">In Progress</span>
-                                </div>
-                                <div class="col-12 full-desc mt-2">
-                                    <p class="grey scroller">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                                        Similique voluptate reprehenderit molestiae quo laudantium blanditiis sint,
-                                        magni quibusdam doloremque vel voluptas est. Molestias,
-                                        ex! Cumque ut similique cum deleniti eius accusamus nihil!</p>
-                                </div>
-                                <div class="col-12 project-stats row mx-0">
-                                    <div class="col-12 col-md-6 px-0">
-                                        <p class="grey mb-1">Project ID: <span class="stat-value">012380483</span></p>
-                                    </div>
-                                    <div class="col-12 col-md-6 px-0">
-                                        <p class="grey mb-1">Total Budget: <span class="stat-value">N200,000</span></p>
-                                    </div>
-                                    <div class="col-12 col-md-6 px-0">
-                                        <p class="grey mb-1">Start Date: <span class="stat-value">12/11/2019</span></p>
-                                    </div>
-                                    <div class="col-12 col-md-6 px-0">
-                                        <p class="grey mb-1">Location: <span class="stat-value">Aba</span></p>
-                                    </div>
-                                </div>
-                                <div class="col-12 thumbs-comments row mx-0 mt-3">
-                                    <div class="col px-0 text-center">
-                                        <span class="grey"><i class="fa fas fa-2x fa-thumbs-up mr-2"></i>200</span>
-                                    </div>
-                                    <div class="col px-0 text-center">
-                                        <span class="grey"><i class="fa fas fa-2x fa-thumbs-down mr-2"></i>52</span>
-                                    </div>
-                                    <div class="col px-0 text-center">
-                                        <span class="grey"><i class="fa fas fa-2x fa-comments mr-2"></i>200</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
+                <div class="col-12 col-md-8 mt-5 mb-4 projects-section scroller" data-project-dom>
+                   
                 </div>
             </div>
             <footer class="col-12">
