--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -169,8 +169,12 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-8 mt-5 mb-4 projects-section scroller" data-project-dom>
-                   
+                <div class="col-12 col-md-8 mt-5 mb-4 projects-section scroller" >
+                    <div class="col-1 spinner-con text-center" style="top: 20%;">
+                        <div class="spinner-border mt-3" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <footer class="col-12">
