--- a/public/retrieve-data.html
+++ b/public/retrieve-data.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-12 loading-overlay">
                 <div class="col-1 spinner-con text-center">
-                    <div class="spinner-border mt-3" role="status">
+                    <div style="height: 100px; width: 100px; color: azure;" class="spinner-border mt-3" role="status">
                         <span class="sr-only">Loading...</span>
                     </div>
 
