--- a/public/forgotpassword.html
+++ b/public/forgotpassword.html
@@ -44,14 +44,14 @@
             <div class="auth-full col-12 border">
                 <div class="col-12 col-md-4 mx-auto auth-con my-5">
                     <h5 class="mt-5 grey bold text-center">Let's help you get back in</h5>
-                    <form class="col-12 col-md-10 mx-auto px-0 mt-5">
+                    <form class="col-12 col-md-10 mx-auto px-0 mt-5" id="forgot-form">
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
-                            <input type="email" class="form-control" placeholder="Enter email">
+                            <input name="email" type="email" class="form-control" placeholder="Enter email">
                         </div>
                         <button type="submit" class="btn btn-brand mb-5 col-12 bold">Recover</button>
                     </form>
-                    <p class="bold instructions-sent text-center">Please check your mail for instructions</p>
+                    <p class="bold request-status text-center d-none">Please check your mail for instructions</p>
                 </div>
             </div>
             <footer class="col-12">
@@ -123,6 +123,8 @@
 
     <script src="js/general/third_party_cdn.js""></script>
     <script src="js/general/placeholder.js""></script>
+    <script src="js/general/routes.js""></script>
+    <script src="js/apis/auth/forgotPassword.js""></script>
 </body>
 
 </html>
