--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -44,18 +44,18 @@
             <div class="auth-full col-12 border">
                 <div class="col-12 col-md-4 mx-auto auth-con my-5">
                     <h5 class="mt-5 grey bold text-center">Let's help you get back in</h5>
-                    <form class="col-12 col-md-10 mx-auto px-0 mt-5">
+                    <form class="col-12 col-md-10 mx-auto px-0 mt-5" id="reset-form">
                         <div class="form-group mb-2">
                             <label class="bold grey">Enter OTP</label>
-                            <input type="email" class="form-control" placeholder="Enter OTP">
+                            <input name="verifycode" type="number" class="form-control" placeholder="Enter OTP">
                         </div>
                         <div class="form-group mb-2">
                             <label class="bold grey">Password</label>
-                            <input type="password" class="form-control" placeholder="Enter Password">
+                            <input name="password" type="password" class="form-control" placeholder="Enter Password">
                         </div>
                         <button type="submit" class="btn btn-brand mb-5 col-12 bold">Submit</button>
                     </form>
-                    <p class="bold instructions-sent text-center">Please check your mail for instructions</p>
+                    <p class="bold request-status text-center d-none">Password changed Successfully <br>Redirecting to Login...</p>
                 </div>
             </div>
             <footer class="col-12">
@@ -127,6 +127,8 @@
 
     <script src="js/general/third_party_cdn.js""></script>
     <script src="js/general/placeholder.js""></script>
+    <script src="js/general/routes.js""></script>
+    <script src="js/apis/auth/resetPassword.js""></script>
 </body>
 
 </html>
