--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -88,45 +88,66 @@
                 <div class="col-12 col-md-4 personal-settings mt-3 border">
                     <h5 class="grey bold mt-4 mb-2">Personal Settings</h5>
                     <span class="setting-label grey">Your Profile Picture</span> <br>
-                    <button class="btn btn-brand upload-pic-btn font-12px bold mt-3">Upload new profile picture</button>
-                    <form class="update-data-form my-3">
+                    <!-- <button class="btn btn-brand upload-pic-btn font-12px bold mt-3">Upload new profile picture</button> -->
+                    <form class="update-data-form my-3" id="edit-profile-form">
+                        <div class="input-group mb-3">
+                            <span class="grey font-12px col-12 px-0">Upload new picture</span> <br>
+                            <div class="custom-file">
+                                <input name="image" type="file" class="custom-file-input"  accept=".png, .jpg, .jpeg, .svg" id="upload-image-input"
+                                    aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            </div>
+                            <span class="grey font-12px col-12 px-0" id="file-name"></span>
+                        </div>
                         <div class="form-group mt-2">
                             <label>Name</label>
-                            <input type="text" class="form-control" required>
+                            <input name="name" type="text" class="form-control" required>
                         </div>
                         <div class="form-group mt-2">
                             <label>Bio</label>
-                            <textarea type="text" class="form-control"></textarea>
+                            <textarea name="bio" type="text" class="form-control"></textarea>
                         </div>
                         <div class="form-group mt-2">
                             <label>Email</label>
-                            <input type="email" class="form-control">
+                            <input name="email" type="email" class="form-control">
                         </div>
                         <div class="form-group mt-2">
                             <label for="">State</label>
-                            <select class="custom-select">
+                            <select name="state" class="custom-select">
                                 <option class="fake-placeholder" selected>Select a state</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="Abia">Abia</option>
+                                <option value="Akwa Ibom">Akwa Ibom</option>
+                                <option value="Bayelsa">Bayelsa</option>
+                                <option value="Cross River">Cross River</option>
+                                <option value="Delta">Delta</option>
+                                <option value="Edo">Edo</option>
+                                <option value="Imo">Imo</option>
+                                <option value="Ondo">Ondo</option>
+                                <option value="Rivers">Rivers</option>
                             </select>
                         </div>
                         <div class="form-group mt-2">
                             <label for="">City</label>
-                            <select class="custom-select">
+                            <select name="city" class="custom-select">
                                 <option class="fake-placeholder" selected>Select a city</option>
-                                <option value="1">One</option>
-                                <option value="2">Two</option>
-                                <option value="3">Three</option>
+                                <option value="Port Harcourt">Port Harcourt</option>
+                                <option value="Aba">Aba</option>
+                                <option value="Yenagoa">Yenagoa</option>
+                                <option value="Uyo">Uyo</option>
+                                <option value="Calabar">Calabar</option>
+                                <option value="Asaba">Asaba</option>
+                                <option value="Benin">Benin</option>
+                                <option value="Owerri">Owerri</option>
+                                <option value="Akure">Akure</option>
                             </select>
                         </div>
                         <div class="form-group mt-2">
                             <label for="">Gender</label>
-                            <select class="custom-select">
+                            <select name="gender" class="custom-select">
                                 <option class="fake-placeholder" selected>Select a gender</option>
-                                <option value="1">Male</option>
-                                <option value="2">Female</option>
-                                <option value="3">Rather not say</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Rather not say">Rather not say</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
@@ -262,4 +283,7 @@
     </div>
 </body>
 <script src="../../js/general/third_party_cdn.js""></script>
-    <script src=" ../../js/general/placeholder.js""> </script> </html>
+    <script src=" ../../js/general/placeholder.js""> </script>
+    <script src="../../js/general/routes.js""></script>
+    <script src="../../js/general/onSession.js"></script>
+    <script src="../../js/apis/editProfile.js""> </script> </html>
