--- a/public/account/admin/project.html
+++ b/public/account/admin/project.html
@@ -210,7 +210,7 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-2 text-gray-800">Project Page</h1>
-          <p class="mb-4">Project Page the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+          <p class="mb-4">Project Page the demo table below.</p>
 
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
