--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <div class="row">
             <nav class="navbar navbar-expand-lg navbar-light our-nav col-12">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                     <div class="border logo-replace"></div>
                     <span class="ml-3 mt-2 bold">NDDC TRACKER</span>
                 </a>
@@ -31,6 +31,12 @@
                     <ul class="navbar-nav ml-auto nav-utilities">
                         <li class="nav-item mx-3 mt-2">
                             <a class="nav-link" href="#">Categories</a>
+                        </li>
+                        <li class="nav-item mx-3 mt-2">
+                                <a class="nav-link" href="search-results.html">Search</a>
+                        </li>
+                        <li class="nav-item mx-3 mt-2">
+                            <a class="nav-link" href="">Notifications</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -52,9 +58,6 @@
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-3 mt-2">
-                            <a class="nav-link" href="">Notifications</a>
                         </li>
                     </ul>
                 </div>
