--- a/public/signup.html
+++ b/public/signup.html
@@ -34,6 +34,9 @@
                             <a class="nav-link" href="#">Categories</a>
                         </li>
                         <li class="nav-item mx-3">
+                            <a class="nav-link" href="project/search-results.html">Search</a>
+                        </li>
+                        <li class="nav-item mx-3">
                             <a class="nav-link" href="login.html">Sign In</a>
                         </li>
                         <li class="nav-item mx-3">
